<resources>
    <string name="app_name">Robotics Club</string>
    <string name="lets_do_it">Lets do it</string>
    <string name="motivate">Motivate</string>
    <string name="email">  Email</string>
    <string name="password">  Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_account_sign_up_here">Don\'t have account ? Sign up</string>
    <string name="name">Name</string>
    <string name="signup">Sign up</string>
    <string name="already_have_account_sign_in">Already have account ? Sign in</string>
    <string name="get_on_board">Get on Board</string>
    <string name="contact_number">Contact number</string>

    <string name="create_your_profile">Create your profile :</string>

    <string-array name="branchNames">

        <item>Electrical</item>
        <item>Electronics and communication</item>
        <item>Electronics Instrumentation and Control</item>
        <item>Computer science</item>
        <item>mechanical</item>
        <item>Civil</item>
        <item>Information Technology</item>
        <item>Petrochemical</item>
        <item>Production and Industrial</item>
    </string-array>

    <string-array name="y">

        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
        <item>Fourth Year</item>
        <item>Alumni</item>
        <item>Teacher/professor</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="robotics_club">ROBOTICS CLUB</string>
    <string name="update_profile">Update Profile</string>
    <string name="welcome_home">Welcome home,</string>
    <string name="contact_us">Contact Us</string>
    <string name="notice">NOTICE</string>

</resources>
